--- a/bibliography.bib
+++ b/bibliography.bib
@@ -80,8 +80,17 @@
 
 
 @Misc{RERI11,
-author = {Erik},
-title = {What does \_\_read\_mostly in the linux kernel do},
-howpublished = {Web blog},
-note = {http://www.lainoox.com/linux-kernel-\_\_read\_mostly/},
+	author = {Erik},
+	title = {What does \_\_read\_mostly in the linux kernel do},
+	howpublished = {Web blog},
+	year={2010},
+	note = {http://www.lainoox.com/linux-kernel-\_\_read\_mostly/},
+}
+
+@MastersThesis{FLAE12,
+	author = {Lander Alonso Erkoreka},
+	title = {Diseño e implementación de un sensor para el análisis de tráfico concurrente en redes de alta velocidad},
+	school = {Escuela Técnica Superior de Ingeniería de Bilbao},
+	year = {2012},
+	type = {Proyecto Fin de Carrera},
 }
